인증/인가 고도화 (단말기, 백오피스, 사용자) 구분, 하드코딩 제거 (#67)
* chore: claude 로컬 설정파일 .gitignore 추가

* feat: JWT 토큰 타입별 인증 분기 및 Principal 분리

  - TokenType enum 추가 (OWNER, TERMINAL, STEPUP)
  - JwtUtil에 토큰 타입별 생성 메서드 추가
    - generateOwnerToken: 백오피스용
    - generateTerminalToken: 매장 단말용
    - generateStepUpToken: 고객 민감 기능용
  - JwtAuthenticationFilter에서 토큰 타입별 Principal 분기 처리
  - TerminalPrincipal 신규 추가 (ROLE_TERMINAL)
  - CustomerPrincipal에서 phone 필드 제거 (보안: 민감정보 토큰 노출 방지)
  - SecurityConfig에서 /api/terminal/** 권한을 ROLE_TERMINAL로 분리
  - stepup-token-expiration 설정 추가 (기본 10분)

* fix: Controller 하드코딩 ID 제거 및 인증 기반 변경

- CustomerWalletController: walletId=1L 하드코딩 제거, @AuthenticationPrincipal CustomerPrincipal에서 추출
- QrCodeController: ownerId=1L 하드코딩 제거, @AuthenticationPrincipal OwnerPrincipal에서 추출
- QrCodeService: findByIdAndOwnerAccountId로 매장 소유자 검증 구현
- 관련 테스트에 @WithMockOwner, @WithMockCustomer 어노테이션 추가

* chore: CORS 전체 허용 및 OTP 시연용 응답 추가

- CORS 설정 전체 허용 (개발용, TODO: 프로덕션 배포 시 제한 필요)
  - OTP 코드 로그/콘솔 출력 제거 (보안 강화)
- OTP 요청 응답에 devOtpCode 필드 추가 (시연용, TODO: 프로덕션 배포 시 제거)

* fix: JWT 인증 보안 강화 및 동시성 제어 추가

- 토큰 타입 누락 시 OWNER 권한 부여 대신 인증 거부
- Terminal API에서 OwnerPrincipal 대신 TerminalPrincipal 사용
- CUSTOMER 토큰 타입 추가하여 STEPUP과 분리
- Wallet 등록 시 STEPUP 대신 CUSTOMER 토큰 발급
- WalletStampCard 조회 시 비관적 락 적용하여 동시 수정 방지

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor: spotless, checkstyle 적용

---------

Co-authored-by: Claude Opus 4.5 <noreply@anthropic.com>